fix footer info icon align
feature: 7100

--- a/tpl/app/less/stb/ui/footer.less
+++ b/tpl/app/less/stb/ui/footer.less
@@ -47,6 +47,8 @@
                 display:block;
                 text-align:left;
                 background:no-repeat center center;
+
+                &.info { text-align:right; }
             }
 
             .title {
